--- a/dev/index.html
+++ b/dev/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>Development</title>
 
   <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
 
